Refs #4234 Fix z-index of calendar so it appears on top of segment editor

--- a/plugins/Zeitgeist/stylesheets/ui/_periodSelect.less
+++ b/plugins/Zeitgeist/stylesheets/ui/_periodSelect.less
@@ -8,7 +8,7 @@
   float: left;
   margin-right: 10px;
   position: absolute;
-  z-index: 121;
+  z-index: 122; /* must be higher than segmentEditor z-index */
   background-color: #f7f7f7;
 }
 
